--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
 }
@@ -11,7 +11,6 @@
   color: white;
   margin: 0px;
   vertical-align: middle;
-  /* padding-top: 10px; */
   letter-spacing: 5px;
   width: 100%;
 }
@@ -64,4 +63,4 @@ button {
   padding: 10px;
   letter-spacing: 15px;
   font-weight: bold;
-}
+} */
